--- a/decks/main/index.html
+++ b/decks/main/index.html
@@ -396,7 +396,7 @@ data-editable="true" data-user="cfjedimaster" style="height: 500px; box-sizing: 
 <div x-data="{
 	name:'',
 	upperCase() {
-		this.name = this.name.toUpperCase();;
+		this.name = this.name.toUpperCase();
 	}
 }">
 
