--- a/decks/main/index.html
+++ b/decks/main/index.html
@@ -493,7 +493,7 @@ data-editable="true" data-user="cfjedimaster" style="height: 500px; box-sizing: 
 				<li class="fragment"><code>$watch</code> or <code>x-effect</code>
 				<ul>
 					<li class="fragment"><code>$watch('someData', (value, oldValue) => { .... })</code></li>
-					<li class="fragment"><code>x-effect="domSomething(someData)"</code></li>
+					<li class="fragment"><code>x-effect="doSomething(someData)"</code></li>
 				</ul>
 				</li>
 				<li class="fragment"><code>alpine:init</code></li>
@@ -537,7 +537,7 @@ data-editable="true" data-user="cfjedimaster" style="height: 500px; box-sizing: 
 				<ul>
 				<li class="fragment">$el -> Current DOM element</li>
 				<li class="fragment">$refs -> Associates with x-ref DOM element</li>
-				<li class="fragment">$dispath -> Shortcut for event dispatching</li>
+				<li class="fragment">$dispatch -> Shortcut for event dispatching</li>
 				<li class="fragment">$nextTick -> Runs after Alpine does reactive stuff</li>
 				<li class="fragment">$root -> Pointer to top level DOM of app</li>
 				<li class="fragment">$data -> Top level of Alpine data</li>
