--- a/decks/main/index.html
+++ b/decks/main/index.html
@@ -43,6 +43,10 @@
 				</div>
 				</section>
 
+				<section>
+					<a href="https://github.com/cfjedimaster/alpinejs-presentation" target="_new">Slides</a><br/>
+					<img src="img/qrcode_preso.png">
+				</section>
 				<!--
 				<section>
 				<h2>Thank You!</h2>
