add solution link

--- a/decks/main/workshop.html
+++ b/decks/main/workshop.html
@@ -81,6 +81,9 @@
 				<li>✨Round values, ie. no 9.99999</li>
 				<li>✨Use Intl's Currency Formatter</li>
 				</ul>
+				<p class="fragment">
+					<a href="https://codepen.io/cfjedimaster/pen/rNbyoJd?editors=1010" target="_new">My Solution</a>
+				</p>
 				</section>
 
 
